// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The TaskCard Component should match the snapshot 1`] = `
<section
  class="sc-bdfBwQ fFBvFt"
>
  <h2
    class="sc-gsTCUz gzfVJk"
  >
    mock task title
  </h2>
  <p
    class="sc-dlfnbm bglaea"
  >
    A mock description
  </p>
  <p
    class="sc-hKgILt fLjEpC"
  >
    comment 1
  </p>
  <p
    class="sc-hKgILt fLjEpC"
  >
    comment 2
  </p>
</section>
`;

exports[`The TaskColumn Component should match the snapshot 1`] = `
<section
  class="sc-eCssSg jmQFqn"
>
  <h1
    class="sc-jSgupP dhcVWK"
  >
    test title
  </h1>
  <section
    class="sc-bdfBwQ fFBvFt"
  >
    <h2
      class="sc-gsTCUz gzfVJk"
    >
      mock task title
    </h2>
    <p
      class="sc-dlfnbm bglaea"
    >
      A mock description
    </p>
    <p
      class="sc-hKgILt fLjEpC"
    >
      comment 1
    </p>
    <p
      class="sc-hKgILt fLjEpC"
    >
      comment 2
    </p>
  </section>
</section>
`;
